--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .pouch{
 	width:868px;
 	height:auto;
-	background-color:white;
+	background-color:rgb(239 231 231);
 	border:1px solid black;
 	margin:258px;
 }
@@ -19,10 +19,11 @@
 }
 .pen h1{
 	font-size:25px;
-	color:black;
+	color:rgb(25 36 179);
 }
 .pen p{
 	padding:19px 3px;
+	color:grey;
 }
 .pouch{
 	display:flex;
@@ -33,8 +34,9 @@
 }
 .book h2{
 	font-size:25px;
-	color:black;
+	color:rgb(25 36 179);
 }
 .book p{
-	padding:6px 3px;
+	padding:20px 3px;
+	color:grey;
 }
